[package]
name = "portscanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "portscanner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", default-features = false, features = ["extension-module", "macros"] }
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }